<resources>
    <string name="app_name">Football Club</string>
    <string name="titulo">Football Club</string>
    <string name="bt_login">Iniciar Sesión</string>
    <string name="bt_registrar">Registrarse</string>
    <string name="txt_registrar">¿No tienes cuenta?</string>
    <string name="txt_linkRegistrar">Registrate</string>
    <string name="tituloRegistrar">Crea tu cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="terminos">Acepta nuestros términos y condiciones</string>
    <string name="crearCuenta">Crear</string>
    <string name="errorUsuario">El usuario o la contraseña son incorrectos</string>
    <string name="usuarioExistente">El nombre de usuario ya existe</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="buscar">Buscar</string>
    <string name="ajustes">Ajustes</string>
    <string name="añadirEquipo">Añadir Equipo</string>
    <string name="borrarEquipo">Borrar Equipo</string>
    <string name="actualizarEquipo">Actualizar Equipo</string>
    <string name="añadirLiga">Añadir Liga</string>
    <string name="borrarLiga">Borrar Liga</string>
    <string name="actualizarLiga">Actualizar Liga</string>
    <string name="btAñadirEquipo">Añadir</string>
    <string name="nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="numTitulos">Número de titulos</string>
    <string name="nombreLiga">Liga</string>
    <string name="pais">Pais</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="borrar">Borrar</string>
</resources>