<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".activities.AjustesActivity">

    <ImageView
        android:id="@+id/img_irAtrasAjustes"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:onClick="irAtras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/atras" />

    <TextView
        android:id="@+id/txt_tituloAjustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="@string/ajustes"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_añadirEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="110dp"
        android:onClick="irAñadirEquipo"
        android:text="@string/añadirEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloAjustes" />

    <Button
        android:id="@+id/bt_borrarEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="110dp"
        android:text="@string/borrarEquipo"
        android:onClick="irBorrarEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_añadirEquipo" />

    <Button
        android:id="@+id/bt_actualizarEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="110dp"
        android:onClick="irActualizarEquipo"
        android:text="@string/actualizarEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_borrarEquipo" />

    <Button
        android:id="@+id/bt_añadirLIga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="110dp"
        android:onClick="irAñadirLiga"
        android:text="@string/añadirLiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_actualizarEquipo" />

    <Button
        android:id="@+id/bt_actualizarLiga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="110dp"
        android:onClick="irActualizarLiga"
        android:text="@string/actualizarLiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_añadirLIga" />

</androidx.constraintlayout.widget.ConstraintLayout>