<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".activities.equipo.AnadirEquipoActivity">

    <ImageView
        android:id="@+id/img_irAtrasAnadirEquipo"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:onClick="volverActivityPrincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/atras" />

    <TextView
        android:id="@+id/txt_tituloAnadirEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/añadirEquipo"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_anadirNombreEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_anadirImagenEquipo" />

    <EditText
        android:id="@+id/edt_anadirCiudadEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/ciudad"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_anadirNombreEquipo" />

    <EditText
        android:id="@+id/edt_anadirNumTitulos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/numTitulos"
        android:inputType="numberSigned"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_anadirCiudadEquipo" />

    <EditText
        android:id="@+id/edt_anadirNombreLiga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/nombreLiga"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_anadirNumTitulos" />

    <Button
        android:id="@+id/bt_crearEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btAñadirEquipo"
        android:onClick="addEquipo"
        app:layout_constraintBottom_toTopOf="@+id/img_irAtrasAnadirEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_anadirImagenEquipo"
        android:layout_width="112dp"
        android:layout_height="93dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/bt_anadirImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloAnadirEquipo"
        app:srcCompat="@mipmap/ic_launcher_logo" />

    <Button
        android:id="@+id/bt_anadirImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="42dp"
        android:text="Imagen"
        android:onClick="anadirImagen"
        app:layout_constraintBottom_toBottomOf="@+id/img_anadirImagenEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_anadirImagenEquipo"
        app:layout_constraintTop_toTopOf="@+id/img_anadirImagenEquipo" />

</androidx.constraintlayout.widget.ConstraintLayout>