<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2200BCD4"
    app:cardBackgroundColor="#1DFFFFFF">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:background="#25FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_rv_imagenLiga"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:padding="10sp"
            tools:srcCompat="@drawable/competicion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/txt_rv_nombreLiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:background="#00FFFFFF"
                android:text="@string/nombreLiga"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_rv_paisLiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:background="#00FFFFFF"
                android:text="@string/pais"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_rv_fechaInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:background="#00FFFFFF"
                android:text="@string/fecha_inicio"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>