<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".activities.equipo.BorrarEquipoActivity">

    <ImageView
        android:id="@+id/img_irAtrasBorrarEquipo"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:onClick="volverAjustes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/atras" />

    <ImageView
        android:id="@+id/img_borrarBuscar"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:onClick="busquedaEquipoBorrar"
        app:layout_constraintEnd_toStartOf="@+id/edt_borrarNombreEquipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloBorrarEquipo"
        app:srcCompat="@drawable/lupa" />

    <TextView
        android:id="@+id/txt_tituloBorrarEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/borrarEquipo"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_actualizarEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_borrarNombreEquipo" />

    <EditText
        android:id="@+id/edt_borrarNombreEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_borrarBuscar"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloBorrarEquipo" />

    <Button
        android:id="@+id/bt_borrar_borrarEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="30dp"
        android:text="@string/borrar"
        android:onClick="borrarEquipo"
        app:layout_constraintBottom_toTopOf="@+id/img_irAtrasBorrarEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>